Feito parte visual do ponto de rejeição

--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
@@ -8,7 +8,7 @@
       <div class="text-box">
         <span class=""
           >Selecione a opção desejada e o número referente. Visualize a
-          documentação se necessário</span
+          documentação se necessário.</span
         >
         <div class="input-box mt-3">
           <input type="text" pInputText placeholder="Selecione" />
