--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -1,6 +1,31 @@
-<p *ngFor="let item of this.customerService.customers">
-  {{ item.city }}
-</p>
+<p-dialog [(visible)]="display">
+  <ng-template pTemplate="header">
+    <div class="cabecalho">
+      <h1>Editar Contato do Parceiro</h1>
+      <p>Preecha os campos abaixo.</p>
+    </div>
+  </ng-template>
+
+  <div class="editar-campo">
+    <label for="">Nome</label><br />
+    <input type="text" [(ngModel)]="editarNomeItem" />
+  </div>
+  <div class="editar-campo">
+    <label for="">Telefone</label><br />
+    <input type="text" [(ngModel)]="editarTelefoneItem" />
+  </div>
+  <div class="editar-campo">
+    <label for="">E-mail</label><br />
+    <input type="text" [(ngModel)]="editarEmailItem" />
+  </div>
+  <div class="d-flex justify-content-end editar-buttons">
+    <button type="button" class="btn btn-outline-dark">Cancelar</button>
+    <div class="ml-2 mr-2"></div>
+    <button type="button" class="btn btn-dark" (click)="editar()">
+      Confirmar <i class="pi pi-check"></i>
+    </button>
+  </div>
+</p-dialog>
 
 <div class="row">
   <div class="col">
@@ -41,50 +66,84 @@
         </select>
       </div>
     </div>
+
     <div class="col col-search">
-      <div class="input-group">
-        <input
-          type="text"
-          class="form-control"
-          id="search-input"
-          placeholder="Busque por código SAP ou razão social..."
+      <div class="d-flex justify-content-start" style="width: 100%">
+        <p-autoComplete
           [(ngModel)]="pesquisar"
-        />
-        <div class="input-group-append">
-          <button
-            href="http://localhost:4200/ncs/import"
-            class="btn btn-dark"
-            type="button"
-          >
-            Buscar <i class="pi pi-search"></i>
-          </button>
-        </div>
+          [suggestions]="results"
+          (completeMethod)="search($event)"
+          field="corporate_name"
+          [style]="{ width: '100%' }"
+          [inputStyle]="{ width: '100%' }"
+          class="p-autocomplete"
+          placeholder="Busque por código SAP ou razão social..."
+        >
+          <ng-template let-brand pTemplate="item">
+            <div>
+              <span class="auto-complete-title">{{
+                brand.corporate_name
+              }}</span>
+              <div class="d-flex justify-content-between">
+                <div>
+                  <span class="auto-complete-label">CÓDIGO</span><br />
+                  <span class="auto-complete-item">{{ brand.code }}</span>
+                </div>
+                <div>
+                  <span class="auto-complete-label">NOME DO CONTATO</span><br />
+                  <span class="auto-complete-item">{{
+                    brand.responsible_name
+                  }}</span>
+                </div>
+                <div>
+                  <span class="auto-complete-label">E-MAIL</span><br />
+                  <span class="auto-complete-item">{{
+                    brand.responsible_email
+                  }}</span>
+                </div>
+                <div>
+                  <span class="auto-complete-label">TELEFONE</span><br />
+                  <span class="auto-complete-item">{{
+                    brand.responsible_phone
+                  }}</span>
+                </div>
+              </div>
+            </div>
+          </ng-template>
+        </p-autoComplete>
+
+        <button
+          href="http://localhost:4200/ncs/import"
+          class="btn btn-dark"
+          type="button"
+          (click)="onSelected()"
+        >
+          Buscar <i class="pi pi-search"></i>
+        </button>
       </div>
     </div>
   </div>
 
-  <div class="div-ident-parceiro row">
-    <!-- <div>
-      <h1 class="div-ident-parceiro-titulo">
-        Aguardando identificação do parceiro
-      </h1>
-      <div class="background-white"></div>
-    </div> -->
+  <div *ngIf="!isSelected"><app-product></app-product></div>
+
+  <div class="div-ident-parceiro row" *ngIf="isSelected">
     <h1 class="titulo-parceiro">Dados do Parceiro</h1>
     <div class="dados-parceiro col razao-social">
       <h1>Razão Social</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quis
-        repellendus corporis obcaecati vitae enim qui accusamus ea autem, libero
-        ab architecto aliquam error facere cupiditate odit eligendi voluptatibus
-        impedit?
+        {{ selected.corporate_name }}
       </p>
     </div>
     <div class="dados-parceiro col">
       <div class="dados-contato">
         <div class="d-flex justify-content-between">
           <h1>Dados do Contato</h1>
-          <button type="button" class="btn btn-dark" iconPos="left">
+          <button
+            type="button"
+            class="btn btn-dark"
+            iconPos="left"
+            (click)="showDialog()"
+          >
             <i class="pi pi-pencil"></i>Editar Contato
           </button>
         </div>
@@ -93,7 +152,7 @@
           <div>
             <span class="info-titulo">Nome</span>
             <br />
-            <span class="info-dados">Joyce Fernandes</span>
+            <span class="info-dados">{{ selected.responsible_name }}</span>
           </div>
         </div>
         <div class="contato-info d-flex flex-row">
@@ -101,7 +160,7 @@
           <div>
             <span class="info-titulo">Telefone</span>
             <br />
-            <span class="info-dados">(55) 4 7744-5544</span>
+            <span class="info-dados">{{ selected.responsible_phone }}</span>
           </div>
         </div>
         <div class="contato-info d-flex flex-row">
@@ -109,7 +168,7 @@
           <div>
             <span class="info-titulo">E-mail</span>
             <br />
-            <span class="info-dados">joyse.fernandes@parceirolegal.com</span>
+            <span class="info-dados">{{ selected.responsible_email }}</span>
           </div>
         </div>
       </div>
