Finalizado css do step2

--- a/src/app/pages/ncs/create/steps/step2/product/product.component.css
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.css
@@ -1,8 +1,7 @@
-.content {
+.product-info {
   border: 2px solid #333333;
   background: #eeeeee;
   border-radius: 8px;
-  text-align: center;
 }
 .image-box {
   background: #fff;
@@ -12,9 +11,23 @@
 .image-box img {
   margin: 48px;
 }
-h4 {
-  margin: 8px;
+.product-info h4 {
+  margin-left: 8px;
   font-weight: 500;
+}
+.product-info h5 {
+  font-weight: 800;
+}
+.product-info h4,
+.product-info h5 {
   font-size: 20px;
   line-height: 33px;
+  margin-bottom: 0;
+}
+.id-box {
+  background: #eeeeee;
+  border-radius: 18px;
+  padding: 4px 8px;
+  color: #7d7d7d;
+  font-weight: 700;
 }
