--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -1,6 +1,27 @@
-<div class="content mt-3">
-  <h4>Aguardando identificação do produto...</h4>
-  <div class="image-box d-flex align-items-center justify-content-center">
-    <img src="../../../../../../../assets/images/Ilustrações.svg" alt="" />
+<div class="content">
+  <div *ngIf="false" class="mt-3">
+    <app-waiting-product></app-waiting-product>
+  </div>
+  <div *ngIf="true">
+    <div class="product-info mt-3">
+      <h4>Dados do Produto</h4>
+      <div class="image-box p-2">
+        <div class="title-box d-flex align-items-center">
+          <h5>Caixa de Pandora</h5>
+          <div class="id-box ml-2 d-flex align-items-center">
+            <i class="pi pi-ticket mr-2"></i>
+            <span>45879321</span>
+          </div>
+        </div>
+        <p class="mb-0">
+          Lorem ipsum dolor sit amet, consectetur adip Lorem ipsum dolor sit
+          amet, consectetur adip Lorem ipsum dolor sit amet, consectetur adip
+          Lorem ipsum dolor sit amet, consectetur adip Lorem ipsum dolor sit
+          amet, consectetur adip Lorem ipsum dolor sit amet, consectetur adip
+          Lorem ipsum dolor sit amet, consectetur adip Lorem ipsum dolor sit
+          amet, consectetur adip
+        </p>
+      </div>
+    </div>
   </div>
 </div>
