Ajeita layout da tela de revisar informações

--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -5,26 +5,29 @@
       Dados de Identificação
     </h2>
     <div class="d-flex card-data justify-content-evenly">
-      <div>
+      <div class="contato-info d-flex flex-row">
+        <i class="bi bi-ticket-perforated mr-1"></i>
         <div>
-          <i class="bi bi-ticket-perforated mr-1"></i>
           <span class="info-titulo">Número</span>
+          <br />
+          <p class="info-dados">544554</p>
         </div>
-        <p class="info-dados">544554</p>
       </div>
-      <div>
+      <div class="contato-info d-flex flex-row">
+        <i class="bi bi-calendar-week mr-1"></i>
         <div>
-          <i class="bi bi-calendar-week mr-1"></i>
           <span class="info-titulo">Data de Abertura</span>
+          <br />
+          <p class="info-dados">26/04/2022</p>
         </div>
-        <p class="info-dados">26/04/2022</p>
       </div>
-      <div>
+      <div class="contato-info d-flex flex-row">
+        <i class="bi bi-calendar-week mr-1"></i>
         <div>
-          <i class="bi bi-calendar-week mr-1"></i>
           <span class="info-titulo">Data de Fechamento</span>
+          <br />
+          <p class="info-dados">26/04/2022</p>
         </div>
-        <p class="info-dados">26/04/2022</p>
       </div>
     </div>
   </div>
@@ -35,26 +38,29 @@
       Dados de Emissão
     </h2>
     <div class="d-flex card-data justify-content-evenly">
-      <div>
+      <div class="contato-info d-flex flex-row">
+        <i class="bi bi-person-circle mr-1"></i>
         <div>
-          <i class="bi bi-person-circle mr-1"></i>
           <span class="info-titulo">Emissor</span>
+          <br />
+          <p class="info-dados">Elias</p>
         </div>
-        <p class="info-dados">Elias</p>
       </div>
-      <div>
+      <div class="contato-info d-flex flex-row">
+        <i class="bi bi-person-circle mr-1"></i>
         <div>
-          <i class="bi bi-person-circle mr-1"></i>
           <span class="info-titulo">Responsável</span>
+          <br />
+          <p class="info-dados">Janaína</p>
         </div>
-        <p class="info-dados">Janaína</p>
       </div>
-      <div>
+      <div class="contato-info d-flex flex-row">
+        <i class="bi bi-geo-alt mr-1"></i>
         <div>
-          <i class="bi bi-geo-alt mr-1"></i>
           <span class="info-titulo">Departamento</span>
+          <br />
+          <p class="info-dados">Rh</p>
         </div>
-        <p class="info-dados">Rh</p>
       </div>
     </div>
   </div>
