--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -52,23 +52,25 @@
     Ponto de Controle
   </h2>
   <div class="d-flex">
-    <div class="col-6">
+    <div class="col-6 d-flex flex-row">
+      <i class="pi pi-directions mr-1"></i>
       <div>
-        <i class="pi pi-directions"></i>
         <span class="info-titulo">Instrução</span>
+        <br>
+        <p class="info-dados">
+          Lorem ipsum dolor sit amet, consectetur adipisicing e
+        </p>
       </div>
-      <span class="info-dados"
-        >Lorem ipsum dolor sit amet, consectetur adipisicing e</span
-      >
     </div>
-    <div>
+    <div class="d-flex flex-row">
+      <i class="bi bi-calculator mr-1"></i>
       <div>
-        <i class="bi bi-calculator"></i>
         <span class="info-titulo">Número de Controle</span>
+        <br>
+        <p class="info-dados">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        </p>
       </div>
-      <p class="info-dados">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      </p>
     </div>
   </div>
 </div>
@@ -78,23 +80,25 @@
     Ponto de Rejeição
   </h2>
   <div class="d-flex">
-    <div class="col-6">
+    <div class="col-6 d-flex flex-row">
+      <i class="pi pi-directions mr-1"></i>
       <div>
-        <i class="pi pi-directions"></i>
         <span class="info-titulo">Instrução</span>
+        <br>
+        <p class="info-dados">
+          Lorem ipsum dolor sit amet, consectetur adipisicing e
+        </p>
       </div>
-      <p class="info-dados">
-        Lorem ipsum dolor sit amet, consectetur adipisicing e
-      </p>
     </div>
-    <div>
+    <div class="d-flex flex-row">
+      <i class="bi bi-chat-text mr-1"></i>
       <div>
-        <i class="bi bi-chat-text"></i>
         <span class="info-titulo">Resposta</span>
+        <br />
+        <p class="info-dados">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        </p>
       </div>
-      <p class="info-dados">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      </p>
     </div>
   </div>
 </div>
