--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -7,19 +7,21 @@
   </ng-template>
 
   <div class="editar-campo">
-    <label for="">Nome</label><br />
+    <label for="">Nome</label>
     <input type="text" [(ngModel)]="editarNomeItem" />
   </div>
   <div class="editar-campo">
-    <label for="">Telefone</label><br />
+    <label for="">Telefone</label>
     <input type="text" [(ngModel)]="editarTelefoneItem" />
   </div>
   <div class="editar-campo">
-    <label for="">E-mail</label><br />
+    <label for="">E-mail</label>
     <input type="text" [(ngModel)]="editarEmailItem" />
   </div>
   <div class="d-flex justify-content-end editar-buttons">
-    <button type="button" class="btn btn-outline-dark">Cancelar</button>
+    <button type="button" class="btn btn-outline-dark" (click)="hideDialog()">
+      Cancelar
+    </button>
     <div class="ml-2 mr-2"></div>
     <button type="button" class="btn btn-dark" (click)="editar()">
       Confirmar <i class="pi pi-check"></i>
@@ -53,128 +55,123 @@
   </div>
 </div>
 
-<div class="div-search">
-  <div class="row row-1">
-    <div class="col-3">
-      <div class="dropdown">
-        <label>Tipo de Parceiro</label>
-        <select [(ngModel)]="tiposParceiroItem">
-          <option value="" disabled selected hidden>Selecione...</option>
-          <option *ngFor="let tiposAuditoria of tiposParceiro">
-            {{ tiposAuditoria }}
-          </option>
-        </select>
-      </div>
-    </div>
-
-    <div class="col col-search">
-      <div class="d-flex justify-content-start" style="width: 100%">
-        <p-autoComplete
-          [(ngModel)]="pesquisar"
-          [suggestions]="results"
-          (completeMethod)="search($event)"
-          field="corporate_name"
-          [style]="{ width: '100%' }"
-          [inputStyle]="{ width: '100%' }"
-          class="p-autocomplete"
-          placeholder="Busque por código SAP ou razão social..."
-        >
-          <ng-template let-brand pTemplate="item">
-            <div>
-              <span class="auto-complete-title">{{
-                brand.corporate_name
-              }}</span>
-              <div class="d-flex justify-content-between">
-                <div>
-                  <span class="auto-complete-label">CÓDIGO</span><br />
-                  <span class="auto-complete-item">{{ brand.code }}</span>
-                </div>
-                <div>
-                  <span class="auto-complete-label">NOME DO CONTATO</span><br />
-                  <span class="auto-complete-item">{{
-                    brand.responsible_name
-                  }}</span>
-                </div>
-                <div>
-                  <span class="auto-complete-label">E-MAIL</span><br />
-                  <span class="auto-complete-item">{{
-                    brand.responsible_email
-                  }}</span>
-                </div>
-                <div>
-                  <span class="auto-complete-label">TELEFONE</span><br />
-                  <span class="auto-complete-item">{{
-                    brand.responsible_phone
-                  }}</span>
-                </div>
-              </div>
-            </div>
-          </ng-template>
-        </p-autoComplete>
-
-        <button
-          href="http://localhost:4200/ncs/import"
-          class="btn btn-dark"
-          type="button"
-          (click)="onSelected()"
-        >
-          Buscar <i class="pi pi-search"></i>
-        </button>
-      </div>
-    </div>
+<div class="row row-search">
+  <div class="dropdown col">
+    <label>Tipo de Parceiro</label>
+    <select [(ngModel)]="tiposParceiroItem">
+      <option value="" disabled selected hidden>Selecione...</option>
+      <option *ngFor="let tiposAuditoria of tiposParceiro">
+        {{ tiposAuditoria }}
+      </option>
+    </select>
   </div>
 
-  <div *ngIf="!isSelected"><app-product></app-product></div>
+  <div class="col-search col">
+    <div class="d-flex justify-content-start" style="width: 100%">
+      <p-autoComplete
+        [(ngModel)]="pesquisar"
+        [suggestions]="results"
+        (completeMethod)="search($event)"
+        field="corporate_name"
+        [style]="{ width: '100%' }"
+        [inputStyle]="{ width: '100%' }"
+        class="p-autocomplete"
+        placeholder="Busque por código SAP ou razão social..."
+      >
+        <ng-template let-brand pTemplate="item">
+          <div>
+            <span class="auto-complete-title">{{ brand.corporate_name }}</span>
+            <div class="d-flex justify-content-between">
+              <div>
+                <span class="auto-complete-label">CÓDIGO</span><br />
+                <span class="auto-complete-item">{{ brand.code }}</span>
+              </div>
+              <div>
+                <span class="auto-complete-label">NOME DO CONTATO</span><br />
+                <span class="auto-complete-item">{{
+                  brand.responsible_name
+                }}</span>
+              </div>
+              <div>
+                <span class="auto-complete-label">E-MAIL</span><br />
+                <span class="auto-complete-item">{{
+                  brand.responsible_email
+                }}</span>
+              </div>
+              <div>
+                <span class="auto-complete-label">TELEFONE</span><br />
+                <span class="auto-complete-item">{{
+                  brand.responsible_phone
+                }}</span>
+              </div>
+            </div>
+          </div>
+        </ng-template>
+      </p-autoComplete>
 
-  <div class="div-ident-parceiro row" *ngIf="isSelected">
-    <h1 class="titulo-parceiro">Dados do Parceiro</h1>
-    <div class="dados-parceiro col razao-social">
-      <h1>Razão Social</h1>
-      <p>
-        {{ selected.corporate_name }}
-      </p>
+      <button
+        href="http://localhost:4200/ncs/import"
+        class="btn btn-dark"
+        type="button"
+        (click)="onSelected()"
+      >
+        Buscar <i class="pi pi-search"></i>
+      </button>
     </div>
-    <div class="dados-parceiro col">
-      <div class="dados-contato">
-        <div class="d-flex justify-content-between">
-          <h1>Dados do Contato</h1>
-          <button
-            type="button"
-            class="btn btn-dark"
-            iconPos="left"
-            (click)="showDialog()"
-          >
-            <i class="pi pi-pencil"></i>Editar Contato
-          </button>
+  </div>
+</div>
+
+<div *ngIf="!isSelected"><app-waiting-product></app-waiting-product></div>
+
+<div class="div-ident-parceiro row" *ngIf="isSelected">
+  <h1 class="titulo-parceiro">Dados do Parceiro</h1>
+  <div class="dados-parceiro col razao-social">
+    <h1>Razão Social</h1>
+    <p>
+      {{ selected.corporate_name }}
+    </p>
+  </div>
+  <div class="dados-parceiro col">
+    <div class="dados-contato">
+      <div class="d-flex justify-content-between">
+        <h1>Dados do Contato</h1>
+        <button
+          type="button"
+          class="btn btn-dark"
+          iconPos="left"
+          (click)="showDialog()"
+        >
+          <i class="pi pi-pencil"></i>Editar Contato
+        </button>
+      </div>
+      <div class="contato-info d-flex flex-row">
+        <i class="pi pi-user"></i>
+        <div>
+          <span class="info-titulo">Nome</span>
+          <br />
+          <span class="info-dados">{{ selected.responsible_name }}</span>
         </div>
-        <div class="contato-info d-flex flex-row">
-          <i class="pi pi-user"></i>
-          <div>
-            <span class="info-titulo">Nome</span>
-            <br />
-            <span class="info-dados">{{ selected.responsible_name }}</span>
-          </div>
+      </div>
+      <div class="contato-info d-flex flex-row">
+        <i class="pi pi-phone"></i>
+        <div>
+          <span class="info-titulo">Telefone</span>
+          <br />
+          <span class="info-dados">{{ selected.responsible_phone }}</span>
         </div>
-        <div class="contato-info d-flex flex-row">
-          <i class="pi pi-phone"></i>
-          <div>
-            <span class="info-titulo">Telefone</span>
-            <br />
-            <span class="info-dados">{{ selected.responsible_phone }}</span>
-          </div>
-        </div>
-        <div class="contato-info d-flex flex-row">
-          <i class="pi pi-at"></i>
-          <div>
-            <span class="info-titulo">E-mail</span>
-            <br />
-            <span class="info-dados">{{ selected.responsible_email }}</span>
-          </div>
+      </div>
+      <div class="contato-info d-flex flex-row">
+        <i class="pi pi-at"></i>
+        <div>
+          <span class="info-titulo">E-mail</span>
+          <br />
+          <span class="info-dados">{{ selected.responsible_email }}</span>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 <div class="pt-3 pb-3">
   <p-divider></p-divider>
 </div>
