--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -1,9 +1,9 @@
 <div class="content">
-  <div *ngIf="false" class="mt-3">
+  <div *ngIf="!hasProduct" class="mt-1">
     <app-waiting-product></app-waiting-product>
   </div>
-  <div *ngIf="true">
-    <div class="product-info mt-3">
+  <div *ngIf="hasProduct">
+    <div class="product-info mt-1">
       <h4>Dados do Produto</h4>
       <div class="image-box p-2">
         <div class="title-box d-flex align-items-center">
