--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
@@ -1,22 +1,25 @@
 <div class="content">
   <h3>Ponto de Rejeição</h3>
-  <span class="">Descreva o problema e porque esta NC esta sendo aberta.</span>
-  <div *ngIf="false">
+  <div *ngIf="true">
     <app-waiting-product></app-waiting-product>
   </div>
-  <div *ngIf="true" class="mt-3">
+
+  <div *ngIf="false" class="mt-3">
+    <span class=""
+      >Descreva o problema e porque esta NC esta sendo aberta.</span
+    >
     <p-editor
       [style]="{ height: '210px' }"
       [(ngModel)]="textAreaAcoes"
     ></p-editor>
-  </div>
-  <div class="d-flex justify-content-center mt-3">
-    <button
-      pButton
-      pRipple
-      type="button"
-      label="Visualizar Documento"
-      class="p-button-secondary"
-    ></button>
+    <div class="d-flex justify-content-center mt-3">
+      <button
+        pButton
+        pRipple
+        type="button"
+        label="Visualizar Documento"
+        class="p-button-secondary"
+      ></button>
+    </div>
   </div>
 </div>
