--- a/src/app/pages/ncs/create/steps/step2/step2.component.css
+++ b/src/app/pages/ncs/create/steps/step2/step2.component.css
@@ -1,6 +1,10 @@
 .header .button-box {
   display: flex;
   flex-direction: column;
+  align-items: end;
+}
+.header .button-box button {
+  width: 200px;
 }
 .text-box h3 {
   font-weight: 700;
@@ -10,24 +14,6 @@
 .header .button-box i {
   font-size: 12px;
   color: #7d7d7d;
-}
-.search-input input {
-  width: 100%;
-  padding-left: 40px;
-}
-.search-input {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
-.search-input i {
-  position: absolute;
-  bottom: 11px;
-  margin-left: 15px;
-}
-.search-input button {
-  padding-right: 30px;
 }
 .search-box {
   display: flex;
@@ -40,5 +26,9 @@
 label {
   font-size: 13px;
   font-weight: bold;
-  margin-bottom: 2px;
+  top: -13px;
+  position: absolute;
+}
+.sx {
+  margin: auto 0;
 }
