--- a/src/app/pages/ncs/create/steps/step2/step2.component.html
+++ b/src/app/pages/ncs/create/steps/step2/step2.component.html
@@ -1,48 +1,44 @@
-<div class="header d-flex justify-content-between">
-  <div class="text-box">
-    <h3>Produto</h3>
-    <p>
-      Preencha os campos abaixo para identificar um produto e confirme os dados
-      abaixo. Caso não encontre um produto. Atualize a base de cadastros.
-    </p>
-  </div>
-  <div class="button-box">
-    <span> <i class="pi pi-history"></i> ultima atualização: Há 3 minutos</span>
-    <button
-      pButton
-      pRipple
-      type="button"
-      class="p-button-secondary"
-      label="Atualizar Cadastros"
-      icon="pi pi-download"
-      iconPos="right"
-    ></button>
+<div class="header">
+  <div class="row m-0">
+    <div class="text-box col-8 p-0">
+      <h3>Produto</h3>
+      <p>
+        Preencha os campos abaixo para identificar um produto e confirme os
+        dados abaixo. Caso não encontre um produto. Atualize a base de
+        cadastros.
+      </p>
+    </div>
+    <div class="button-box col-4">
+      <span>
+        <i class="pi pi-history"></i> ultima atualização: Há 3 minutos</span
+      >
+      <button
+        pButton
+        pRipple
+        type="button"
+        class="p-button-secondary"
+        label="Atualizar Cadastros"
+        icon="pi pi-download"
+        iconPos="right"
+      ></button>
+    </div>
   </div>
 </div>
 <div class="content">
   <div class="input-box pt-2">
     <div class="row m-0">
-      <div class="col-6 search-box">
-        <div class="search-input">
-          <i class="pi pi-search"></i>
-          <input
-            type="text"
-            pInputText
-            placeholder="Busque por código SAP ou razão social..."
-          />
-          <button
-            type="button"
-            pButton
-            pRipple
-            label="Search"
-            iconPos="right"
-            icon="pi pi-search"
-            class="p-button-secondary"
-          ></button>
+      <div class="col-4 p-0 my-auto">
+        <div class="p-fluid">
+          <p-autoComplete
+            [(ngModel)]="text"
+            [suggestions]="output"
+            (completeMethod)="search($event)"
+            placeholder="Search"
+          ></p-autoComplete>
         </div>
       </div>
-      <div class="col-6 d-flex align-items-end">
-        <div class="d-flex flex-column mr-3">
+      <div class="col-8 d-flex">
+        <div class="d-flex flex-column mr-3 my-auto">
           <label for="amountNC">Quantidade de NC</label>
           <input
             name="amountNC"
@@ -52,7 +48,7 @@
             class="p-inputtext-sm"
           />
         </div>
-        <div class="d-flex flex-column">
+        <div class="d-flex flex-column my-auto">
           <label for="amountTotal">Quantidade Total</label>
           <input
             name="amountTotal"
@@ -62,7 +58,7 @@
             class="p-inputtext-sm"
           />
         </div>
-        <div class="d-flex flex-column pl-3 xs">
+        <div class="d-flex flex-column pl-3">
           <p-radioButton
             name="ncType"
             label="Não conformidade real"
@@ -80,13 +76,13 @@
       </div>
     </div>
   </div>
-  <app-product></app-product>
+  <app-product [hasProduct]="haveSelectedProduct"></app-product>
   <hr class="mb-5 mt-5" />
   <div class="row">
     <div class="col">
       <app-checkpoint></app-checkpoint>
     </div>
-    <div class="col">
+    <div class="col mt-4 mt-xl-0">
       <app-rejection-point></app-rejection-point>
     </div>
   </div>
