Refatora a tela dos contatos

--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
@@ -42,7 +42,7 @@
       <app-step2></app-step2>
     </div>
     <div *ngIf="stepPosition === 2">
-      <app-stakeholders></app-stakeholders>
+      <app-step3></app-step3>
     </div>
   </div>
 </div>
