--- a/src/app/pages/ncs/create/steps/step3/contact-dialog/contact-dialog.component.css
+++ b/src/app/pages/ncs/create/steps/step3/contact-dialog/contact-dialog.component.css
@@ -1,22 +1,3 @@
-h2 {
-    font-size: 28px;
-}
-
-.cabecalho {
-    min-width: 400px;
-}
-
-.cabecalho h1 {
-    font-size: 25px;
-    font-weight: 500;
-    margin-bottom: 0px;
-    margin-top: 0px;
-}
-
-.cabecalho p {
-    font-size: 15px;
-    color: gray;
-}
 i{
     font-size: 15px;
     margin-left: 8px;
@@ -48,4 +29,20 @@ label {
 .editar-buttons i {
     font-size: 12px;
     margin-left: 5px;
+}
+
+.auto-complete-title{
+    font-size: 13px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.auto-complete-label {
+    font-size: 11px;
+    color: gray;
+}
+
+.p-autocomplete{
+    border-radius: 5px;
+    border: 2px solid rgb(51, 51, 51);
 }
