--- a/src/app/pages/ncs/import-json/import-json.component.html
+++ b/src/app/pages/ncs/import-json/import-json.component.html
@@ -1,5 +1,5 @@
 <p-toast></p-toast>
-<h1>Importar Clientes</h1>
+<h1 class="mt-5">Importar Clientes</h1>
 <p-fileUpload (uploadHandler)="onUpload($event, 'customer')"
               [customUpload]="true"
               accept=".xlsx, .xls"
@@ -12,7 +12,7 @@
     </ng-template>
 </p-fileUpload>
 
-<h1>Importar Fornecedores</h1>
+<h1 class="mt-3">Importar Fornecedores</h1>
 <p-fileUpload (uploadHandler)="onUpload($event, 'provider')"
               [customUpload]="true"
               accept=".xlsx, .xls"
@@ -26,7 +26,7 @@
     </ng-template>
 </p-fileUpload>
 
-<h1>Importar Produtos</h1>
+<h1 class="mt-3">Importar Produtos</h1>
 <p-fileUpload (uploadHandler)="onUpload($event, 'product')"
               [customUpload]="true"
               accept=".xlsx, .xls"
