Feito funcionalidade do autocomplete com troca de layout

--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -7,19 +7,14 @@
       <h4>Dados do Produto</h4>
       <div class="image-box p-2">
         <div class="title-box d-flex align-items-center">
-          <h5>Caixa de Pandora</h5>
+          <h5>{{ product.name }}</h5>
           <div class="id-box ml-2 d-flex align-items-center">
             <i class="pi pi-ticket mr-2"></i>
-            <span>45879321</span>
+            <span>{{ product.id }}</span>
           </div>
         </div>
         <p class="mb-0">
-          Lorem ipsum dolor sit amet, consectetur adip Lorem ipsum dolor sit
-          amet, consectetur adip Lorem ipsum dolor sit amet, consectetur adip
-          Lorem ipsum dolor sit amet, consectetur adip Lorem ipsum dolor sit
-          amet, consectetur adip Lorem ipsum dolor sit amet, consectetur adip
-          Lorem ipsum dolor sit amet, consectetur adip Lorem ipsum dolor sit
-          amet, consectetur adip
+          {{ product.description }}
         </p>
       </div>
     </div>
