--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
@@ -1,10 +1,10 @@
 <div class="content">
   <h3>Ponto de Rejeição</h3>
-  <div *ngIf="true">
+  <div *ngIf="!test">
     <app-waiting-product></app-waiting-product>
   </div>
 
-  <div *ngIf="false" class="mt-3">
+  <div *ngIf="test" class="mt-3">
     <span class=""
       >Descreva o problema e porque esta NC esta sendo aberta.</span
     >
