--- a/src/app/pages/ncs/create/steps/step2/product/product.component.css
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.css
@@ -1,33 +1,45 @@
-.product-info {
-  border: 2px solid #333333;
-  background: #eeeeee;
-  border-radius: 8px;
+.header .button-box {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
-.image-box {
-  background: #fff;
-  margin-inline: 8px;
-  margin-bottom: 8px;
+.header .button-box button {
+  width: 200px;
 }
-.image-box img {
-  margin: 48px;
-}
-.product-info h4 {
-  margin-left: 8px;
-  font-weight: 500;
-}
-.product-info h5 {
-  font-weight: 800;
-}
-.product-info h4,
-.product-info h5 {
-  font-size: 20px;
-  line-height: 33px;
-  margin-bottom: 0;
-}
-.id-box {
-  background: #eeeeee;
-  border-radius: 18px;
-  padding: 4px 8px;
-  color: #7d7d7d;
+.text-box h3 {
   font-weight: 700;
+  font-size: 28px;
+}
+.header .button-box span,
+.header .button-box i {
+  font-size: 12px;
+  color: #7d7d7d;
+}
+.search-box {
+  display: flex;
+  align-items: end;
+  padding: 0;
+}
+.input-box label {
+  font-size: 13px;
+  font-weight: bold;
+  top: -13px;
+  position: absolute;
+}
+.autoComplete-item {
+}
+.autoComplete-item h4 {
+  font-size: 18px;
+  font-weight: 700;
+}
+.autoComplete-item span {
+  font-size: 12px;
+  font-weight: 700;
+  color: #b4b4b4;
+}
+.autoComplete-item p {
+  font-size: 18px;
+  font-weight: 400;
+  color: #7d7d7d;
+  white-space: normal !important;
 }
