--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -1,22 +1,94 @@
-<div class="content">
-  <div *ngIf="!hasProduct" class="mt-1">
-    <app-waiting-product></app-waiting-product>
+<div class="header">
+  <div class="row m-0">
+    <div class="text-box col-8 p-0">
+      <h3>Produto</h3>
+      <p>
+        Preencha os campos abaixo para identificar um produto e confirme os
+        dados abaixo. Caso não encontre um produto. Atualize a base de
+        cadastros.
+      </p>
+    </div>
+    <div class="button-box col-4">
+      <span>
+        <i class="pi pi-history"></i> ultima atualização: Há 3 minutos</span
+      >
+      <a href="ncs/import">
+        <button
+          pButton
+          pRipple
+          type="button"
+          class="p-button-secondary"
+          label="Atualizar Cadastros"
+          icon="pi pi-download"
+          iconPos="right"
+        ></button>
+      </a>
+    </div>
   </div>
-  <div *ngIf="hasProduct">
-    <div class="product-info mt-1">
-      <h4>Dados do Produto</h4>
-      <div class="image-box p-2">
-        <div class="title-box d-flex align-items-center">
-          <h5>{{ product.name }}</h5>
-          <div class="id-box ml-2 d-flex align-items-center">
-            <i class="pi pi-ticket mr-2"></i>
-            <span>{{ product.id }}</span>
-          </div>
-        </div>
-        <p class="mb-0">
-          {{ product.description }}
-        </p>
+</div>
+<div class="input-box pt-2">
+  <div class="row m-0">
+    <div class="col-4 p-0 my-auto">
+      <div class="p-fluid autoComplete">
+        <p-autoComplete
+          [(ngModel)]="autoCompleteValue"
+          [suggestions]="results"
+          (completeMethod)="search($event)"
+          placeholder="Busque por nome, descrição ou código SAP"
+          field="name"
+          (onSelect)="checkProduct($event)"
+          (input)="uncheckProduct()"
+        >
+          <ng-template let-product pTemplate="item">
+            <div class="autoComplete-item">
+              <h4>{{ product.name }}</h4>
+              <span>{{ product.sap }}</span>
+              <p>{{ product.description }}</p>
+            </div>
+          </ng-template>
+        </p-autoComplete>
+      </div>
+    </div>
+    <div class="col-8 d-flex">
+      <div class="d-flex flex-column mr-3 my-auto">
+        <label for="amountNC">Quantidade de NC</label>
+        <input
+          name="amountNC"
+          type="text"
+          pInputText
+          placeholder="Digite"
+          class="p-inputtext-sm"
+        />
+      </div>
+      <div class="d-flex flex-column my-auto">
+        <label for="amountTotal">Quantidade Total</label>
+        <input
+          name="amountTotal"
+          type="text"
+          pInputText
+          placeholder="Digite"
+          class="p-inputtext-sm"
+        />
+      </div>
+      <div class="d-flex flex-column pl-3">
+        <p-radioButton
+          name="ncType"
+          label="Não conformidade real"
+          value="val1"
+          [(ngModel)]="radioButtonValue"
+        ></p-radioButton>
+        <p-radioButton
+          name="ncType"
+          label="Não conformidade Potencial / Oportunidade de Melhoria"
+          class="pt-2"
+          value="val2"
+          [(ngModel)]="radioButtonValue"
+        ></p-radioButton>
       </div>
     </div>
   </div>
 </div>
+<app-product-info
+  [hasProduct]="hasSelectedProduct"
+  [product]="selectedProduct"
+></app-product-info>
