--- a/src/app/pages/ncs/create/steps/step2/step2.component.html
+++ b/src/app/pages/ncs/create/steps/step2/step2.component.html
@@ -1,103 +1,14 @@
-<div class="header">
-  <div class="row m-0">
-    <div class="text-box col-8 p-0">
-      <h3>Produto</h3>
-      <p>
-        Preencha os campos abaixo para identificar um produto e confirme os
-        dados abaixo. Caso não encontre um produto. Atualize a base de
-        cadastros.
-      </p>
-    </div>
-    <div class="button-box col-4">
-      <span>
-        <i class="pi pi-history"></i> ultima atualização: Há 3 minutos</span
-      >
-      <button
-        pButton
-        pRipple
-        type="button"
-        class="p-button-secondary"
-        label="Atualizar Cadastros"
-        icon="pi pi-download"
-        iconPos="right"
-      ></button>
-    </div>
+<app-product (data)="Receive2Data($event)"></app-product>
+
+<hr class="mb-5 mt-5" />
+
+<div class="row">
+  <div class="col">
+    <app-checkpoint [hasProduct]="hasSelectedProduct"></app-checkpoint>
   </div>
-</div>
-<div class="content">
-  <div class="input-box pt-2">
-    <div class="row m-0">
-      <div class="col-4 p-0 my-auto">
-        <div class="p-fluid">
-          <p-autoComplete
-            [(ngModel)]="text"
-            [suggestions]="results"
-            (completeMethod)="search($event)"
-            placeholder="Search"
-            field="name"
-            (onSelect)="show($event)"
-            (input)="test($event)"
-          >
-            <ng-template let-product pTemplate="item">
-              <h4>{{ product.id }}</h4>
-              <h4>{{ product.description }}</h4>
-              <h4>{{ product.name }}</h4>
-            </ng-template>
-          </p-autoComplete>
-        </div>
-      </div>
-      <div class="col-8 d-flex">
-        <div class="d-flex flex-column mr-3 my-auto">
-          <label for="amountNC">Quantidade de NC</label>
-          <input
-            name="amountNC"
-            type="text"
-            pInputText
-            placeholder="Digite"
-            class="p-inputtext-sm"
-          />
-        </div>
-        <div class="d-flex flex-column my-auto">
-          <label for="amountTotal">Quantidade Total</label>
-          <input
-            name="amountTotal"
-            type="text"
-            pInputText
-            placeholder="Digite"
-            class="p-inputtext-sm"
-          />
-        </div>
-        <div class="d-flex flex-column pl-3">
-          <p-radioButton
-            name="ncType"
-            label="Não conformidade real"
-            value="val1"
-            [(ngModel)]="selectedValue"
-          ></p-radioButton>
-          <p-radioButton
-            name="ncType"
-            label="Não conformidade Potencial / Oportunidade de Melhoria"
-            class="pt-2"
-            value="val2"
-            [(ngModel)]="selectedValue"
-          ></p-radioButton>
-        </div>
-      </div>
-    </div>
-  </div>
-  <app-product
-    [hasProduct]="haveSelectedProduct"
-    [product]="selectedContact"
-  ></app-product>
-  <hr class="mb-5 mt-5" />
-  <div class="row">
-    <div class="col">
-      <app-checkpoint [hasProduct]="haveSelectedProduct"></app-checkpoint>
-    </div>
-    <div class="col mt-4 mt-xxl-0">
-      <app-rejection-point
-        [hasProduct]="haveSelectedProduct"
-      ></app-rejection-point>
-    </div>
+  <div class="col mt-4 mt-xxl-0">
+    <app-rejection-point
+      [hasProduct]="hasSelectedProduct"
+    ></app-rejection-point>
   </div>
 </div>
