--- a/src/app/pages/ncs/create/steps/step2/step2.component.html
+++ b/src/app/pages/ncs/create/steps/step2/step2.component.html
@@ -1,4 +1,6 @@
-<app-product (data)="Receive2Data($event)"></app-product>
+<app-product
+  (hasSelectedProductEvent)="getHasSelectedProduct($event)"
+></app-product>
 
 <hr class="mb-5 mt-5" />
 
